--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.my_btn {
+  background-color: skyblue;
+  color: white;
+  border: none;
+
+  padding: 10px 30px;
+}
