--- a/src/App.css
+++ b/src/App.css
@@ -113,3 +113,13 @@
   display: flex;
   align-items: center;
 }
+
+.close-btn {
+  float: right;
+}
+
+.register-inside {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
